Migrate Collections references
Use List.of() instead of Collections. Also be smarter about treating
arrays.

Change-Id: I1674e00e4003587b176df939e250ea81d802453d
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>