@@ -5,27 +5,23 @@
  * terms of the Eclipse Public License v1.0 which accompanies this distribution,
  * and is available at http://www.eclipse.org/legal/epl-v10.html
  */
-
 package org.opendaylight.netconf.test.tool.rpc;
 
-import java.util.Collections;
 import java.util.List;
 import org.opendaylight.netconf.api.xml.XmlElement;
 
 public class DataList {
-
-    private List<XmlElement> configList = Collections.emptyList();
+    private List<XmlElement> configList = List.of();
 
     public List<XmlElement> getConfigList() {
         return configList;
     }
 
-    public void setConfigList(List<XmlElement> configList) {
+    public void setConfigList(final List<XmlElement> configList) {
         this.configList = configList;
     }
 
     public void resetConfigList() {
-        configList = Collections.emptyList();
+        configList = List.of();
     }
-
 }
